Main and Index Changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="content"><h1>Huckle Buckle Beanstalk</h1>
 <hr>
 
-<h2>We have selected a number between 1 and 100. Take a guess what it is.</h2>
+<h2>We have selected a number between 1 and 100. Take a guess.</h2>
 
 
 <input name="input" class="input" type="text" value="Enter a Number from 1 to 100">
