--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
 
 <h2>We have selected a number between 1 and 100. Take a guess.</h2>
 
-
+<form>
 <input name="input" class="input" type="text" value="Enter a Number from 1 to 100">
 <input name="Submit"  class="submit"type="submit">
-<div class="message"></div>
+</form>
+
+<div class="number">
+	
 </div>
+
 </body>
 </html>
