added some comments

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 		
 		
         //For your initial version, feel free to use the built-in "prompt()" function to get user guesses, and the "alert()" function to give         feedback on the user guess.
-        //For the final version of your project, you'll need to create an HTML-based interface for getting user inputs and giving feedback on        guesses.
 		
-       //Your app should ensure that users provide valid inputs. For instance, if a user submits a spaces, a blank guess, or letters, they shoudl    	receive feedback that they need to input a number.
+        //TODO: For the final version of your project, you'll need to create an HTML-based interface for getting user inputs and giving feedback on        guesses.
+		
+       //TODO: Your app should ensure that users provide valid inputs. For instance, if a user submits a spaces, a blank guess, or letters, they shoudl    	receive feedback that they need to input a number.
 	   
-        //The app should feature a button that allows the user to start a new game, without making additional calls to the server
+        //TODO: The app should feature a button that allows the user to start a new game, without making additional calls to the server
 		
-       //Make sure to use version control as you're working on this project, committing early and often.
+    
 			
 });
 </script>
