--- a/index.html
+++ b/index.html
@@ -5,32 +5,9 @@
 <title>Huckle Buckle Beanstalk</title>
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/favicon.ico" >
-<script src="js/jquery1.10.2.min.js"></script>
+<script type="text/javascript" src="js/jquery1.10.2.min.js"></script>
 <script type="text/javascript" src="js/application.js"></script>
-<script>
-	$( document ).ready(function() {
-		//On page load, Javascript should pick a number at random that user will have to guess.
-		
-		getRandomNumber();
-		
-        //The user should be prompted to enter a guess.
-		
-		
-        //The user should get feedback about their guess -- if it was too high, too low, or just right. Initially, don't worry about telling users           if they're getting "hotter" or "colder", just tell them if there previous guess was "hot" or "cold".
-		
-		
-        //For your initial version, feel free to use the built-in "prompt()" function to get user guesses, and the "alert()" function to give         feedback on the user guess.
-		
-        //TODO: For the final version of your project, you'll need to create an HTML-based interface for getting user inputs and giving feedback on        guesses.
-		
-       //TODO: Your app should ensure that users provide valid inputs. For instance, if a user submits a spaces, a blank guess, or letters, they shoudl    	receive feedback that they need to input a number.
-	   
-        //TODO: The app should feature a button that allows the user to start a new game, without making additional calls to the server
-		
-    
-			
-});
-</script>
+
 </head>
 
 <body>
@@ -39,10 +16,12 @@
 
 <h2>We have selected a number between 1 and 100. Take a guess.</h2>
 
-<form>
-<input name="input" class="input" type="text" value="Enter a Number from 1 to 100">
-<input name="Submit"  class="submit"type="submit">
-</form>
+
+
+<input type="text" name="guess" id="guess" maxlength="3"></input>
+<input type="submit" name="submit" id="submit" ></input>
+
+
 
 <div class="number">
 	
