Added Switch Case

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 
 
 
-<input type="text" name="guess" id="guess" maxlength="3"></input>
-<input type="submit" name="submit" id="submit" ></input>
+<input type="text" name="guess" id="guess" maxlength="3" ></input>
+<div class="align-form">
+<input type="submit" name="submit" id="submit" >
+</input><input type="reset" name="reset" id="reset" ></input>
+</div>
 
 
 
