--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Huckle Buckle Beanstalk</title>
 <link href="css/main.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="images/favicon.ico" >
+<link rel="shortcut icon" href="images/favicon.ico"/ >
 <script type="text/javascript" src="js/jquery1.10.2.min.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.10.3.custom.min.js"></script>
 <script type="text/javascript" src="js/application.js"></script>
 
 </head>
