Added <h2> to display message

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
 <h2>We have selected a number between 1 and 100. Take a guess.</h2>
 
-
-
 <input type="text" name="guess" id="guess" maxlength="3" placeholder="Enter a number from 1 to 100" ></input>
 <div class="align-form">
 <input type="submit" name="submit" id="submit" >
@@ -28,7 +26,11 @@
 
 
 <div class="number">
-	
+<h2></h2>	
+</div>
+
+<div class="hint">
+
 </div>
 
 </body>
