--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <input type="text" name="guess" id="guess" maxlength="3" placeholder="Enter a number from 1 to 100" ></input>
 <div class="align-form">
-<input type="submit" name="submit" id="submit" >
-</input><input type="reset" name="reset" id="reset" ></input>
+<input type="submit" name="submit" id="submit" ></input>
+<input type="reset" name="reset" id="reset" ></input>
 </div>
 
 
